--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <article>
-        <h1>&#128075; Hi! I'm [...]</h1>
+        <h1>&#128075; Hi! I'm Badger</h1>
         <p>
             Welcome to my GitHub account. 
         </p>
@@ -15,20 +15,22 @@
         <article>
         <h2>&#128587; About Me</h2>
         <ul>
-            <li>I am originally from [...]</li>
-            <li>I speak [...]</li>
-            <li>I am currently learning how to use GitHub because [...]</li>
-            <li>I like to [...]</li>
+            <li>I am originally from Italy</li>
+            <li>I speak Italian, English</li>
+            <li>I am currently learning how to use GitHub because yes.</li>
+            <li>I like to read pizza recipes that would make my aggressively italian grandma extremely concerned.</li>
         </ul>
         </article>
         <article>
         <h2>&#127979; About My Studies </h2>
         <ul>
-            <li>I am studying [...] at [...]</li>
+            <li>I am studying DT at UB</li>
             <li>I can code in:
                 <ul>
-                    <li><code>[...]</code></li>
-                    <li><code>[...]</code></li>
+                    <li><code>I'm</code></li>
+                    <li><code>Terrible</code></li>
+                    <li><code>At</code></li>
+                    <li><code>Coding</code></li>
                 </ul>
             </li>
         </ul>
@@ -36,12 +38,12 @@
         <article>
         <h2>&#127829; About Pizza</h2>
         <ul>
-            <li>My favourite pizza is [...]</li>
+            <li>My favourite pizza is Margherita</li>
             <li>Its toppings include:
                 <ul>
-                    <li>[...]</li>
-                    <li>[...]</li>
-                    <li>[...]</li>
+                    <li>Tomato sauce</li>
+                    <li>Mozzarella</li>
+                    <li>Basil</li>
                 </ul>
             </li>
         </ul>
